<resources>
    <string name="app_name">Authentica</string>
    <string name="app_launcher">Authentica</string>
    <string name="no_accounts">No account has been added yet</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_about">About</string>
    <string name="menu_theme">Theme</string>
    <string name="msg_invalid_qr_code">Invalid QR Code</string>
    <string name="msg_account_added">Account added</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="msg_confirm_delete">Are you sure you want to remove this account?</string>
    <string name="msg_account_removed">Account removed</string>
    <string name="button_add">Add</string>
    <string name="button_remove">Remove</string>
    <string name="alert_rename">Rename</string>
    <string name="alert_remove">"Remove "</string>
    <string name="msg_camera_permission">Camera permission not granted</string>
    <string name="Default">Default</string>
    <string name="Dark">Dark</string>
    <string name="Light">Light</string>

</resources>
