<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit_24"
        android:orderInCategory="100"
        android:title="@string/menu_edit"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_24"
        android:orderInCategory="100"
        android:title="@string/menu_delete"
        app:showAsAction="ifRoom" />
</menu>
