<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewOTP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="4sp"
        android:background="#00000000"
        android:textColor="?attr/colorPrimaryDark"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewOTP"
        android:layout_alignParentStart="true"
        android:background="#00000000"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="?attr/colorAccent" />


</RelativeLayout>